blue_green_deployment_project/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bluegreen-app
      env: green
  template:
    metadata:
      labels:
        app: bluegreen-app
        env: green
    spec:
      containers:
      - name: bluegreen-app
        image: ranatarek/mybluegreen-app:green
        ports:
        - containerPort: 5000
