blue_green_deployment_project/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  labels:
    app: blue
spec:
  selector:
    app: blue
  ports:
    - protocol: TCP
      port: 80     # The port that the service will expose
      targetPort: 5000  # The port on the container where the app is running
  type: ClusterIP
