blue_green_deployment_project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-service
spec:
  selector:
    app: bluegreen-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
